--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,6 +18,7 @@ main {
     display: flex;
     justify-content: center; 
     align-items: center;
+    margin: auto;
     width: 100vw;
     height: 100vh;
 }
@@ -25,15 +26,15 @@ main {
 section {
     display: flex;
     flex-direction: column;
-    width: 340px;
-    height: 600px;
+    width: 300px;
+    height: 510px;
     background-color: #fff;
     border-radius: 20px;
 }
 
 div#img {
     width: 100%;
-    height: 300px;
+    height: 250px;
     background-image: url('../imagens/cell.jpg');
     background-repeat: no-repeat;
     background-position: top right center; 
@@ -51,13 +52,13 @@ form {
 }
 
 form h1 {
-    padding: 12px;
-    font-size: 1.8em;
+    padding: 10px;
+    font-size: 1.6em;
 }
 
 input {
     width: 220px;
-    height: 35px;
+    height: 30px;
     margin-top: 14px;
     padding: 6px;
 }
