--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,6 +8,8 @@
 }
 
 html, body {
+    width: 100vw;
+    height: 100vh;
     background-color: #412482;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
@@ -24,21 +26,19 @@ main {
 section {
     display: flex;
     flex-direction: column;
-    width: 340px;
-    height: 600px;
+    width: 250px;
+    height: 500px;
+    overflow: hidden;
     background-color: #fff;
     border-radius: 20px;
 }
 
 div#img {
     width: 100%;
-    height: 250px;
-    background-image: url('../imagens/cell.jpg');
+    height: 165px;
+    background:#412482 url('../imagens/cell.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 20px 20px 0 0;
-
-
 }
 
 form {
