--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,8 +17,7 @@ html, body {
 main {
     display: flex;
     justify-content: center; 
-    align-items: center;
-    margin: auto;
+    align-items: center; 
     width: 100vw;
     height: 100vh;
 }
@@ -26,16 +25,17 @@ main {
 section {
     display: flex;
     flex-direction: column;
-    width: 250px;
-    height: 500px;
+    width: 325px;
+    height: 580px;
     overflow: hidden;
     background-color: #fff;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.404);
     border-radius: 20px;
 }
 
 div#img {
     width: 100%;
-    height: 165px;
+    height: 220px;
     background:#412482 url('../imagens/cell.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -46,22 +46,25 @@ form {
     flex-direction: column;
     align-items: center;
     position: relative;
+    width: 100%;
 }
 
 form h1 {
+    margin-top: 18px;
     padding: 10px;
     font-size: 1.6em;
 }
 
 input {
-    width: 220px;
-    height: 30px;
-    margin-top: 14px;
+    width: 235px;
+    height: 35px;
+    margin-top: 16px;
     padding: 6px;
 }
 
 input[type="submit"] {
     width: 170px;
+    height: 42px;
     padding: 0;
     background-color: #5A33B4;
     border-radius: 30px;
@@ -71,5 +74,5 @@ input[type="submit"] {
 }
 
 form p {
-    margin-top: 15px;
+    margin-top: 18px;
 }
