--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@
 html, body {
     width: 100vw;
     height: 100vh;
-    background-color: #412482;
+    background-color: #6C5897;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
@@ -25,8 +25,8 @@ main {
 section {
     display: flex;
     flex-direction: column;
-    width: 325px;
-    height: 580px;
+    width: 320px;
+    height: 570px;
     overflow: hidden;
     background-color: #fff;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.404);
@@ -36,7 +36,7 @@ section {
 div#img {
     width: 100%;
     height: 220px;
-    background:#412482 url('../imagens/cell.jpg');
+    background:#6C5897 url('../imagens/cell.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -66,13 +66,19 @@ input[type="submit"] {
     width: 170px;
     height: 42px;
     padding: 0;
-    background-color: #5A33B4;
+    background-color: #693ACF;
     border-radius: 30px;
     border: none;
     color: #fff;
     cursor: pointer;
+    transition: .4s;
+}
+
+input[type="submit"]:hover {
+    background-color: #412482;
 }
 
 form p {
     margin-top: 18px;
+    color: #9378CF;
 }
