--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 980px) {
     section {
         width: 700px;
-        height: 360px;
+        height: 400px;
         flex-direction: row;
     }
 
@@ -14,10 +14,45 @@
 
     div#formulario {
         width: 380px;
+        height: 100%;
+    }
+
+    form {
+       justify-content: center;
+    }
+
+    form h1 {
+       margin: 0;
+       font-size: 2.1em;
     }
 
     input {
-        width: 270px;
+        width: 290px;
+    }
+}
+
+@media screen and (min-width: 980px) {
+    section {
+        flex-direction: row-reverse;
+        width: 920px;
+        height: 500px;
     }
 
+    div#img {
+        width: 50%;
+        height: 100%;
+    }
+    
+    div#formulario {
+        width: 50%;
+        height: 100%;
+    }
+
+    form {
+        justify-content: center;
+    }
+
+    input {
+        width: 290px;
+    }
 }
