--- a/estilos/style.css
+++ b/estilos/style.css
@@ -66,7 +66,7 @@ div.cont-input {
     align-items: center;
     margin-top: 15px;
     height: 40px;
-    background-color: rgb(112, 22, 112);
+    background-color: #701670;
     border-radius: 5px;
 }
 
@@ -86,7 +86,7 @@ input[type="submit"] {
     height: 42px;
     margin-top: 18px;
     padding: 0;
-    background-color: #693ACF;
+    background-color: #6f33be;
     border-radius: 30px;
     border: none;
     color: #fff;
