--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ main {
 section {
     display: flex;
     flex-direction: column;
-    min-width: 250px;
+    width: 300px;
     height: 570px;
     overflow: hidden;
     background-color: #fff;
